# Auto-research-in-few-lines

./: .gitignore  README.md  README_for_agent.md  TASK_STATUS.md  auto_setup.sh  pyproject.toml
.agents/skills/arif-bootstrap/: SKILL.md
.agents/skills/arif-bootstrap/references/: API_REFERENCE.md
.ipynb_checkpoints/: README-checkpoint.md
arif/: __init__.py  agent.py  auto_research.py  guard.py
arif/llm_adapters/: __init__.py  base.py  claude.py  codex.py  gemini.py  hermes.py  opencode.py  qwen.py
example/: basic_loop.py
example/adversarial_init_arif/: arif_init.py
example/cold_start_generate_evaluator_and_loop_file/: README_for_agent.md  arif_init.py
example/cold_start_karpathy_autoresearch/: HOW_TO_USE_Arif.md  arif_init.py  basic_loop.py
example/diabetes_sklearn/: .gitignore  arif_run.py  evaluator.py  strategy.py
example/diabetes_sklearn/.ipynb_checkpoints/: aiagent_run-checkpoint.sh  estimator-checkpoint.py  evaluator-checkpoint.py  search_params-checkpoint.py  strategy-checkpoint.py
example/gravitational_wave_best_fit_searching/: arif_main.py  auto_run.sh  eval_only.pbs  modular_optimization-Fisher.py  optimized_mismatch_IMRI_0PA.npy  optimized_params_IMRI_0PA.npy  run_all.pbs  signal_parameter_array_IMRI.npy  true_mismatch_IMRI_0PA.npy  trusted_evaluator.py  utils.py
example/tutorial/: README_for_agent.md  arif_init.py  arif_loop.py  arif_tutorial.ipynb  evaluator.py  train.py
tests/: main_test.py  test_agent.py  test_auto_research.py  test_guard.py  test_live_fire.py  test_session_recovery.py
