[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arif"
version = "0.1.0"
description = "Auto research in few lines"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "liumx"}]

[tool.setuptools]
packages = ["arif", "arif.llm_adapters"]
